Removed MIT license. Added copyright to all files.

--- a/frontend/src/StreamlitDialog.css
+++ b/frontend/src/StreamlitDialog.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 .streamlit-upload-first-line {
   margin-bottom: 0.5rem;
 }
