--- a/frontend/src/elements/DocString.css
+++ b/frontend/src/elements/DocString.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 .streamlit-container .doc-containter {
   background-color: #F0F3F9;
   padding: 0.5rem 1rem;
