--- a/frontend/src/elements/ImageList.css
+++ b/frontend/src/elements/ImageList.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 .streamlit-container .image-container {
   display: inline-block;
   margin-right: 10px;
