--- a/frontend/src/ConnectionStatus.css
+++ b/frontend/src/ConnectionStatus.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 #ConnectionStatus {
   display: flex;
   align-items: center;
