--- a/frontend/src/MainMenu.css
+++ b/frontend/src/MainMenu.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 #MainMenuButton {
   height: 2.5rem;
   width: 2.5rem;
