--- a/frontend/src/WebClient.css
+++ b/frontend/src/WebClient.css
@@ -1,4 +1,9 @@
 /**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
+/**
  * Palette:
  * - Black: #101620
  * - Gray: #768096
