--- a/frontend/src/elements/Balloons.css
+++ b/frontend/src/elements/Balloons.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 .balloons > .balloon {
   position: fixed;
   bottom: 0;
