--- a/frontend/src/elements/ExceptionElement.css
+++ b/frontend/src/elements/ExceptionElement.css
@@ -1,14 +1,10 @@
-.streamlit-container .exception {
-  /* height: 400px; */
-  /* background-color: #F0F3F9;
-  padding: 0.5rem 1rem;*/
-}
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
 
 .streamlit-container .exception .message {
-  /* padding-bottom: 0.5rem; */
   margin-bottom: 0.5rem;
-  /* border-bottom: 1px solid #E6E9EF; */
-  /* font-weight: bold; */
 }
 
 .streamlit-container .exception .stack-trace {
