--- a/frontend/src/elements/Table.css
+++ b/frontend/src/elements/Table.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 .streamlit-container .streamlit-table {
   font-size: 0.8rem;
   font-family: 'IBM Plex Mono', monospace;
