--- a/frontend/src/elements/Text.css
+++ b/frontend/src/elements/Text.css
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
 .streamlit-container .fixed-width {
   font-family: 'IBM Plex Mono', monospace;
   white-space: pre;
