--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -12,83 +12,58 @@
             action="https://script.google.com/macros/s/AKfycbybsXsHyw_NjgLr5LupCGh8AAZTp6U00eiWd5TA3L4roSvI4ES8/exec"
             method="POST"
             target="hiddenFrame"
+            id="main-form"
+            onsubmit="return onSubmit()"
             >
           <div>
             <input
                 id="signup-email"
                 name="email"
-                placeholder="something@probablygmail.com"
+                placeholder="you@probablygmail.com"
                 required="true"
                 type="email"
                 />
           </div>
-          <div>
+          <div id="button-field">
+            <input
+                id="signup-success"
+                type="button"
+                value="✔️ We got you"
+                disabled="true"
+                class="hidden"
+                />
             <input
                 id="signup-button"
                 type="submit"
                 value="Keep me posted"
-                onclick="window.setTimeout(function() {document.location.href = '/success?redirectTo=/'}, 500)"
                 />
           </div>
         </form>
-      </div>
-
-      <div
-          id="circles"
-          class="secondary-image"
-          onmouseover="splitCircles()"
-          onmouseout="joinCircles()"
-          >
-        <div class="circle pink"></div>
-        <div class="circle green"></div>
-        <div class="circle purple"></div>
       </div>
     </section>
 
   </div>
 
-
   <iframe name="hiddenFrame" width="0" height="0" border="0" style="display: none;"></iframe>
-  <script src="{{ .Site.BaseURL }}scripts/anime.min.js"></script>
+
   <script>
-    function animate(selector) {
-      anime({
-        targets: selector,
-        translateX: 1.5*(Math.random() - 0.5) * 10,
-        translateY: 1.5*(Math.random() - 0.5) * 10,
-        direction: 'alternate',
-        easing: 'easeInOutSine',
-        duration: Math.random() * 1200 + 1200,
-        delay: 0
-      }).finished.then(function() { animate(selector) });
-    }
 
-    animate('.pink');
-    animate('.green');
+    var signupEmail = document.getElementById('signup-email');
+    var formEl = document.getElementById('main-form');
 
-    var mouseOutTime = null;
-
-    function splitCircles() {
-      mouseOutTime = null;
-      updateCircleState();
-    }
-
-    function joinCircles() {
-      mouseOutTime = Date.now();
-      updateCircleState();
-    }
-
-    function updateCircleState() {
-      const el = document.getElementById('circles');
-      if (mouseOutTime) {
-        if (Date.now() - mouseOutTime > 3000) {
-          el.classList.remove('split');
-        } else {
-          setTimeout(updateCircleState, 300);
-        }
-      } else {
-        el.classList.add('split');
+    function onSubmit() {
+      if (signupEmail.value.trim().length == 0) {
+        return false;
       }
+
+      formEl.classList.add('success');
+
+      window.setTimeout(function() {
+        signupEmail.value = '';
+        formEl.classList.remove('success');
+      }, 8000);
+
+      return true;
     }
   </script>
 {{ end }}
