--- a/site/static/css/home.css
+++ b/site/static/css/home.css
@@ -8,6 +8,10 @@ main .contents {
   width: 50rem;
 }
 
+.main-text {
+  max-width: 45vw;
+}
+
 main {
   margin-top: 0;
 }
@@ -29,22 +33,33 @@ p {
   font-size: 1rem;
   margin-bottom: 0.66em;
   width: 15em;
-  border: solid #cbcbcb;
+  border: solid #bfc4d0;
   border-width: 0 0 1px;
   color: #768096;
   max-width: 80vw;
+  /* When transitioning to the "visible" state: */
+  transition:
+      opacity 300ms,
+      visibility 300ms step-start;
 }
 
 #signup-email:focus {
   outline: none;
-  border-color: #bbb;
+  border-color: #b5bccc;
 }
 
 #signup-email::placeholder {
-  color: #bbb;
+  color: #b5bccc;
 }
 
-#signup-button {
+#button-field {
+  position: relative;
+}
+
+#signup-button,
+#signup-success {
+  position: absolute;
+  top: 0;
   background-color: #f1516c;
   border: none;
   border-radius: 1.5rem;
@@ -59,8 +74,7 @@ p {
   display: flex;
   justify-content: center;
   align-child: center;
-  transition: 300ms box-shadow;
-  max-width: 80vw;
+  width: 10rem;
 }
 
 #signup-button:focus {
@@ -72,63 +86,64 @@ p {
   box-shadow: 0 0.125rem 1rem #f8dbe2;
 }
 
+#signup-button {
+  visibility: visible;
+  opacity: 1;
+  /* When transitioning to the "normal" state: */
+  transition:
+      box-shadow 300ms,
+      opacity 300ms,
+      visibility 300ms step-start;
+}
+
+#signup-success {
+  background-color: #2979e9;
+  box-shadow: 0 0.66rem 1.15rem #cadef9;
+  opacity: 0;
+  visibility: hidden;
+  /* When transitioning to the "normal" state: */
+  transition:
+      opacity 300ms,
+      visibility 300ms step-end;
+}
+
+#button-field {
+  transition:
+      transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.success #button-field {
+  transform: translateY(-3rem);
+}
+
+.success #signup-button {
+  opacity: 0;
+  visibility: hidden;
+  /* When transitioning to the "success" state: */
+  transition:
+      opacity 300ms,
+      visibility 300ms step-end;
+}
+
+.success #signup-success {
+  opacity: 1;
+  visibility: visible;
+  /* When transitioning to the "success" state: */
+  transition:
+      opacity 300ms,
+      visibility 300ms step-start;
+}
+
+.success #signup-email {
+  opacity: 0;
+  visibility: hidden;
+  /* When transitioning to the "success" state: */
+  transition:
+      opacity 300ms,
+      visibility 300ms step-end;
+}
+
+
 .main-text {
   margin-right: 1rem;
-}
-
-.secondary-image {
-  position: relative;
-  max-width: 22rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-#circles {
-  transition: 300ms transform;
-}
-
-#circles.split {
-  transform: scale(0.5);
-}
-
-.split .pink {
-  margin-top: -8rem;
-  margin-left: -8rem;
-}
-
-.split .green {
-  margin-top: 8rem;
-  margin-left: 8rem;
-}
-
-.circle {
-  border-radius: 100%;
-  height: 400px;
-  mix-blend-mode: multiply;
-  opacity: 0.9;
-  position: absolute;
-  width: 20rem;
-  transition: 300ms margin;
-}
-
-.pink { 
-  background: rgb(232,162,163);
-  background: linear-gradient(308deg, rgba(232,162,163,1) 0%, rgba(221,90,112,1) 100%);
-}
-
-.green { 
-  background: rgb(102,173,189);
-  background: linear-gradient(308deg, rgba(102,173,189,1) 0%, rgba(200,185,185,1) 100%);
-}
-
-.purple {
-  background: rgb(200,158,192);
-  background: linear-gradient(308deg, rgba(200,158,192,1) 0%, rgba(99,71,219,1) 100%);
-}
-
-@media (max-width: 480px) {
-  #circles {
-    display: none;
-  }
 }
