[site] Added focus state to email field

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -15,7 +15,7 @@
             id="main-form"
             onsubmit="return onSubmit()"
             >
-          <div>
+          <div class="field">
             <input
                 id="signup-email"
                 name="email"
@@ -23,8 +23,9 @@
                 required="true"
                 type="email"
                 />
+            <div class="focus-border"></div>
           </div>
-          <div id="button-field">
+          <div class="field" id="button-field">
             <input
                 id="signup-success"
                 type="button"
