[site] New copy, and update 8s "reset" timer to 4s

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -3,11 +3,15 @@
 
     <section class="row">
       <div class="main-text">
-        <h1>What if there was a new way to do interactive data science?</h1>
+
+        <h1>What if data science could be delightful all the way to production?</h1>
+
         <p>
-          Introducing Streamlit — we’re building a new architecture for data
-          science and machine learning. Sound interesting? Stay updated.
+          At Streamlit, we're working hard on a new architecture for data
+          science and machine learning that we think you&rsquo;ll love. Sound
+          interesting? Apply for the beta below.
         </p>
+
         <form
             action="https://script.google.com/macros/s/AKfycbybsXsHyw_NjgLr5LupCGh8AAZTp6U00eiWd5TA3L4roSvI4ES8/exec"
             method="POST"
@@ -15,6 +19,7 @@
             id="main-form"
             onsubmit="return onSubmit()"
             >
+
           <div class="field">
             <input
                 id="signup-email"
@@ -25,6 +30,7 @@
                 />
             <div class="focus-border"></div>
           </div>
+
           <div class="field" id="button-field">
             <input
                 id="signup-success"
@@ -39,6 +45,7 @@
                 value="Keep me posted"
                 />
           </div>
+
         </form>
       </div>
     </section>
@@ -62,7 +69,7 @@
       window.setTimeout(function() {
         signupEmail.value = '';
         formEl.classList.remove('success');
-      }, 8000);
+      }, 4000);
 
       return true;
     }
