[site] Tweak copy a little bit

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,7 +9,7 @@
         <p>
           At Streamlit, we're working hard on a new architecture for data
           science and machine learning that we think you&rsquo;ll love. Sound
-          interesting? Apply for the beta below.
+          interesting? Request early access below.
         </p>
 
         <form
@@ -42,7 +42,7 @@
             <input
                 id="signup-button"
                 type="submit"
-                value="Keep me posted"
+                value="I want to try it out!"
                 />
           </div>
 
