Create jobs/ site and create "secret" area  (#298)
* [site] Make menu be autogenerated from config.toml

* [site] Make footer date be the date of the site build.

* [site] Remove unused pages.

* [site] Simple lint.

* [site] Move docs/ to secret/docs/

* [site] Add jobs/ site

* [site] Implement two menus: main and secret

* [site] Move secret/foo to _foo

* [site] Fix "Contact" link in menu

* [site] Remove alias that used to map /docs/ to /_docs/

* [site] Remove deprecated "hideTopLinks" variable from jobs MD files

* Updated text

--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -5,7 +5,7 @@
     {{ .Content }}
 
     <ul>
-      {{ range .Data.Pages }}
+      {{ range .Pages }}
         <li>
             <a href="{{.Permalink}}">{{.Title}}</a>
         </li>
