--- a/site/layouts/static/demo.html
+++ b/site/layouts/static/demo.html
@@ -54,7 +54,7 @@
         </p>
         <p class="mb2">Install Streamlit and get started coding:
         <code><em>$</em> pip install streamlit</code> Trouble installing? <a href="mailto:hello+support@streamlit.io">Contact us</a>.</p>
-        <p><a href="/_/docs/">Check our documentation →</a></p>
+        <p><a href="/secret/docs/">Check our documentation →</a></p>
       </div>
     </div>
   </main>
