Docs feature branch: set up Sphinx, update pydocs, implement `streamlit hello`, change `streamlit help` (#341)
* Make st.title/header/subheader use Markdown under the hood. This make sure there's no difference in how we render those vs. Markdown titles.

* Improve st.help(). Add support for function signatures, better text rendering, and st.help(obj)

* Forgot to commit doc_string.py

* Add tests

* Make tests compatible with python2

* Fix tests.

* If no funcsigs module and not python3, don't provide function signatures.

* Require funcsigs

* Fix copyright year.

* Add some docs at site/reports

* Fix bug with st.help(st.line_chart)

* Use ImportError instead of ModuleNotFoundError for compatibility

* Fix typo in reference.py

* Add a few chart examples to charts.py

* Move docs/ to contribute/docs/, to make room for our user-facing docs.

* Remove site/reports

* Add support for ?embed=true for Streamlit reports (#324)

* Sphinx docs, part 3: Finally add Sphinx-based docs. (#325)

* Add support for ?embed=true for Streamlit reports

* Add Sphinx-based docs.

* [docs] Fix make publish-docs

* [docs] Make sphinx not create _build/_sources folder

* [docs] Add sphinx to pipfile

* [docs] Clean up index and fix typos

* [docs] Rename `/_/` to `/secret/`.

* [docs] Make changes from Armando's comments.

* [docs] Remove make.bat

* [docs] Move conf.py exclude_patterns into docs/excludes file.

* [docs] Fix docs/README.md typos

* Sphinx docs, part 4: Improve docstrings and add report examples. (#326)

* Add support for ?embed=true for Streamlit reports

* Add Sphinx-based docs.

* [docs] Fix make publish-docs

* [docs] Make sphinx not create _build/_sources folder

* [docs] Add sphinx to pipfile

* [docs] Clean up index and fix typos

* Improve docstrings and add report examples.

* Don't test doctests. Those are just for documentation purposes right now.

* [docs] Fix Python 2 breakage due t

--- a/frontend/src/StreamlitApp.css
+++ b/frontend/src/StreamlitApp.css
@@ -175,18 +175,35 @@ button:focus {
   background-color: #F63366;
 }
 
-.streamlit-container {
+
+.streamlit-regular .streamlit-container {
   margin-top: 80px;
 }
 
-.wide .streamlit-container {
+.streamlit-wide .streamlit-container {
+  margin-top: 80px;
   width: unset;
   max-width: unset;
+}
+
+.streamlit-embedded .streamlit-container {
+  width: unset;
+  max-width: unset;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.streamlit-embedded header {
+  display: none;
 }
 
 .streamlit-container .element-container {
   display: inline-block;
   margin-bottom: 1rem;
+}
+
+.streamlit-container .element-container:last-child {
+  margin-bottom: 0;
 }
 
 .streamlit-container hr {
