--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,14 @@
  * Copyright 2018 Streamlit Inc. All rights reserved.
  */
 
+.embedded {
+  overflow: hidden;
+}
+
+.embedded:hover {
+  overflow: auto;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
