Fix docs to point to help@streamlit.io and correct Gradient link.

--- a/site/layouts/static/demo.html
+++ b/site/layouts/static/demo.html
@@ -53,7 +53,7 @@
           data like never before.
         </p>
         <p class="mb2">Install Streamlit and get started coding:
-        <code><em>$</em> pip install streamlit</code> Trouble installing? <a href="mailto:hello+support@streamlit.io">Contact us</a>.</p>
+        <code><em>$</em> pip install streamlit</code> Trouble installing? <a href="mailto:help@streamlit.io">Contact us</a>.</p>
         <p><a href="/secret/docs/">Check our documentation →</a></p>
       </div>
     </div>
