Add favicon to all site/ and docs/ pages (#369)

--- a/site/layouts/static/demo.html
+++ b/site/layouts/static/demo.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-122023594-1');
 </script>
 <title>Streamlit - Demo</title>
-<link rel="shortcut icon" href="favicon.png"/>
+<link rel="shortcut icon" href="/favicon.png"/>
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600,700" rel="stylesheet">
 <link rel="stylesheet" href="/css/static.css">
 <body class="page-grid">
