[site] Make logo link point to correct URL (#391)

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -19,7 +19,7 @@
 <body class="page-grid layout-xo4fo">
   <div class="site-header">
     <div class="cell">
-      <a href="home.html">
+      <a href="/">
         <img alt="Streamlit" class="db" src="/images/streamlit.svg" width="103">
       </a>
     </div>
