--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -23,7 +23,8 @@
         <img alt="Streamlit" class="db" src="/images/streamlit.svg" width="103">
       </a>
     </div>
-    <div class="cell"><a href="/jobs">We’re hiring →</a></div>
+    <div class="cell"><a href="/about">About</a></div>
+    <div class="cell"><a href="/jobs">We’re hiring!</a></div>
   </div>
   <main class="home">
     <h1 class="headline-pai4u-lg">Data science reimagined.</h1>
@@ -39,7 +40,7 @@
       </button>
     </form>
   </main>
-  <div class="site-footer home">Copyright 2018 Streamlit Inc. &nbsp; • &nbsp; hello@streamlit.io</div>
+  <div class="site-footer home">Copyright 2019 Streamlit Inc. &nbsp; • &nbsp; hello@streamlit.io</div>
   <iframe name="hiddenFrame" width="0" height="0" border="0" style="display: none;"></iframe>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
   <script src="/js/static.js"></script>
