--- a/site/layouts/static/demo.html
+++ b/site/layouts/static/demo.html
@@ -23,7 +23,8 @@
         <img alt="Streamlit" class="db show-lg" src="/images/streamlit-white.svg" width="103">
       </a>
     </div>
-    <div class="cell"><a class="component-woan7-lg" href="/jobs">We’re hiring →</a></div>
+      <div class="cell"><a href="/about">About</a></div>
+      <div class="cell"><a href="/jobs">We’re hiring!</a></div>
   </div>
   <div class="background-so9ir-lg">
     <div class="ellipse" style="background-image: url(/images/ellipse-green.svg);"></div>
@@ -58,7 +59,7 @@
       </div>
     </div>
   </main>
-  <div class="site-footer">Copyright 2018 Streamlit Inc. &nbsp; • &nbsp; hello@streamlit.io</div>
+  <div class="site-footer">Copyright 2019 Streamlit Inc. &nbsp; • &nbsp; hello@streamlit.io</div>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
   <script src="/js/static.js"></script>
 </body>
