Update demo page with Conda instructions (#433)
* [site] Add about page

* [site] Make about.html use absolute paths for media that we don't want to include in our repo.

* [site] Update intro text for About Us subsections.

* [site] Add Conda instructions to demo page.

* [docs] Fix tiny typo

* [site] Fix site bugs

--- a/site/layouts/static/demo.html
+++ b/site/layouts/static/demo.html
@@ -23,8 +23,8 @@
         <img alt="Streamlit" class="db show-lg" src="/images/streamlit-white.svg" width="103">
       </a>
     </div>
-      <div class="cell"><a href="/about">About</a></div>
-      <div class="cell"><a href="/jobs">We’re hiring!</a></div>
+    <div class="cell"><a class="component-woan7-lg" href="/about">About</a></div>
+    <div class="cell"><a class="component-woan7-lg" href="/jobs">We’re hiring!</a></div>
   </div>
   <div class="background-so9ir-lg">
     <div class="ellipse" style="background-image: url(/images/ellipse-green.svg);"></div>
@@ -54,7 +54,13 @@
           data like never before.
         </p>
         <p class="mb2">Install Streamlit and get started coding:
-        <code><em>$</em> pip install streamlit</code> Trouble installing? <a href="mailto:help@streamlit.io">Contact us</a>.</p>
+        <code><em>$</em> pip install streamlit</code>
+        Or, if you use Conda:
+        <code><em>$</em> conda config --add channels conda-forge
+<em>$</em> conda config --add channels \
+        https://repo.streamlit.io/streamlit-forge
+<em>$</em> conda install streamlit</code>
+        Trouble installing? <a href="mailto:help@streamlit.io">Contact us</a>.</p>
         <p><a href="/secret/docs/">Check our documentation →</a></p>
       </div>
     </div>
