[site] Update About page with Nodira, Tim, Klamka, and <a> anchors. (#460)

--- a/site/layouts/static/about.html
+++ b/site/layouts/static/about.html
@@ -28,6 +28,7 @@
     </div>
   </div>
   <main>
+  <a name="team"></a>
     <section class="layout-ohwi9 var--ie11 pb2 pt3 region-vaf4a" style="background: #f8f9f9;">
       <div class="mb6-lg mt3-lg">
         <h2 class="h1-lg">Our team</h2>
@@ -57,9 +58,21 @@
       </div>
 
       <div>
+        <p><img alt="Nodira Khoussainova" src="https://streamlit.io/media/Nodira-Khoussainova.jpg"></p>
+        <h3>Nodira Khoussainova</h3>
+        <p class="mb3.5 text-smaller">Dr. Khoussainova was tech lead of Product Insights & Experimentation at Twitter. She has a Ph.D. from University of Washington, is the author of Lectures on Discrete Mathematics for Computer Science, and graduated from the University of Auckland at age 16.</p>
+      </div>
+
+      <div>
         <p><img alt="Armando Atienza" src="https://streamlit.io/media/Armando-Atienza.jpg"></p>
         <h3>Armando Atienza</h3>
         <p class="mb3.5 text-smaller">Backend and Systems engineer with over 15 years of experience working on infrastructure projects at Google, Google X, SpaceX, healthcare.gov, Hillary for America, and as an internal in house consultant for Playground Global.</p>
+      </div>
+
+      <div>
+        <p><img alt="Tim Conkling" src="https://streamlit.io/media/Tim-Conkling.jpg"></p>
+        <h3>Tim Conkling</h3>
+        <p class="mb3.5 text-smaller">Tim is an independent game designer and programmer. He was a lead designer and engineer at Three Rings/SEGA and technical director at Gamelab NYC. His most recent project is “Antihero”, an award-winning multiplayer game about running a thieves’ guild in a gas-lit, Dickensian underworld.</p>
       </div>
 
       <div>
@@ -69,6 +82,7 @@
         <p><a class="button w100p-sm" href="/jobs">Join the team</a></p>
       </div>
     </section>
+    <a name="investors"></a>
     <section class="layout-ohwi9 pb2 pt3 tac-sm">
       <div class="mb6-lg mt3-lg">
         <h2 class="h1-lg">Our investors</h2>
@@ -104,7 +118,7 @@
       <div>
         <p><img alt="Daniel Gross" src="https://streamlit.io/media/Daniel-Gross.jpg" style="max-width: 142px;"></p>
         <h3>Daniel Gross</h3>
-        <p class="mb3 text-fade text-smaller">Co-founder Cue<br> Partner Y Combinator</p>
+        <p class="mb3 text-fade text-smaller">Co-founder, Cue<br> Partner, Y Combinator</p>
       </div>
 
       <div>
@@ -112,10 +126,15 @@
         <h3>Solomon Hykes</h3>
         <p class="mb3 text-fade text-smaller">Co-founder, Docker</p>
       </div>
+
+      <div>
+        <p><img alt="Jake Klamka" src="https://streamlit.io/media/Jake-Klamka.jpg" style="max-width: 142px;"></p>
+        <h3>Jake Klamka</h3>
+        <p class="mb3 text-fade text-smaller">CEO, Insight Data Science</p>
+      </div>
     </section>
   </main>
   <div class="site-footer home">Copyright 2019 Streamlit Inc. &nbsp; • &nbsp; hello@streamlit.io</div>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
   <script src="/js/static.js"></script>
 </body>
-
