Fix CSS regressions in header gradient, wide-mode header background, dialog titles (#474)
* Update robots.txt using Google's robot tested tool.

* Fix regression in dialog titles, introduced in 63dabea

* Fix regression in the header gradient CSS, introduced in 10bc978

* Fix regression in wide mode header background.

* Make `streamlit hello` progress bar reach end.

* Move "About" to bottom of main menu, to match spec at #362

--- a/frontend/src/StreamlitApp.css
+++ b/frontend/src/StreamlitApp.css
@@ -96,11 +96,6 @@ h6, .h6 {
 }
 
 header {
-  border-top: 2px solid #FFFD80;
-  border-image: linear-gradient(90deg, #F63366, #FFFD80) 1;
-  border-bottom: 0;
-  border-left: 0;
-  border-right: 0;
   position: fixed;
   top: 0;
   left: 0;
@@ -113,8 +108,17 @@ header {
   align-items: center;
 }
 
-.wide header {
+.streamlit-wide header {
   background-image: linear-gradient(180deg, #ffffff 25%, rgba(255, 255, 255, 0.5) 75%, transparent);
+}
+
+header .decoration {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 2px;
+  background-image: linear-gradient(90deg, #F63366, #FFFD80);
 }
 
 #brand {
@@ -229,7 +233,7 @@ button:focus {
 
 @media (max-width: 768px) {
   header,
-  .wide header {
+  .streamlit-wide header {
     position: absolute;
     background: unset;
   }
