Run on save improvements (#592)
Run-on-save improvements from https://github.com/streamlit/streamlit/issues/573:

- Killing the proxy or the report stops the Running animation
- The settings UI immediately reflects the result of "always rerun"
- `proxy.watchFileSystem` is now `proxy.runOnSave`, and is False by default
- Some UI fixes
- 'A' is a shortcut for 'Always Rerun'
- Fixed a timing bug

--- a/frontend/src/StatusWidget.scss
+++ b/frontend/src/StatusWidget.scss
@@ -102,3 +102,7 @@
   height: $line-height-base * 1rem;
   margin-right: -0.5rem;
 }
+
+.UnderlineFirstLetter::first-letter {
+  text-decoration: underline;
+}
