Don't let dataframe cells wrap (fixes #401) (#599)
* version 0.32.0

* Fix ReportObserver, FileObserver tests

pytest will only run tests in files whose name ends in '_test'

* Unbreak CSS of elements in reports (broken by #567)

* Don't let dataframe cells wrap (fixes #401)

* lint

--- a/frontend/src/elements/DataFrame.css
+++ b/frontend/src/elements/DataFrame.css
@@ -39,6 +39,8 @@
 .streamlit-container .dataframe.col-header,
 .streamlit-container .dataframe.data {
   overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .streamlit-container .dataframe.row-header,
