--- a/frontend/src/StatusWidget.scss
+++ b/frontend/src/StatusWidget.scss
@@ -39,7 +39,7 @@
 #ConnectionStatus.minimized label {
   opacity: 0;
   visibility: hidden;
-  margin-right: 0rem;
+  margin-right: 0;
   max-width: 0;
 }
 
@@ -55,6 +55,8 @@
   justify-content: center;
   border-radius: 5rem;
   margin: 0 1rem 0 0;
+  padding-left: 3rem; // extra padding for a bigger hover target
+  background-color: white; // opaque background
 }
 
 #ReportStatus label {
@@ -64,21 +66,6 @@
   margin: 0 0 0 1rem;
   white-space: nowrap;
   max-width: 20rem;
-  transition:
-      opacity 500ms 0ms,
-      clip 500ms 0ms,
-      max-width 500ms 0ms,
-      margin 500ms 0ms,
-      padding 500ms 0ms,
-      visibility 0ms 500ms;
-}
-
-#ReportStatus.minimized label {
-  opacity: 0;
-  visibility: hidden;
-  margin: 0;
-  padding: 0;
-  max-width: 0;
 }
 
 #ReportStatus label.prompt {
@@ -91,9 +78,16 @@
 }
 
 #ReportStatus button {
-  /* Min width on button text */
   min-width: 4rem;
   margin-left: 0.5rem;
+  white-space: nowrap;
+}
+
+#ReportStatus svg.icon {
+  fill: $gray-700;
+  width: 1rem;
+  height: 1rem;
+  margin-right: -0.5rem;
 }
 
 .ReportRunningIcon {
@@ -105,4 +99,50 @@
 
 .UnderlineFirstLetter::first-letter {
   text-decoration: underline;
+}
+
+//
+// ReportStatus minimize animation
+//
+
+$anim-time: 0.2s;
+$anim-easing: ease-out;
+
+// Unminimized -> Minimized
+#ReportStatus.minimized label,
+#ReportStatus.minimized button,
+#ReportStatus.minimized button * {
+  opacity: 0;
+  visibility: hidden;
+  margin: 0;
+  padding: 0;
+  max-width: 0;
+  min-width: 0;
+  border: 0;
+  transition:
+    opacity $anim-time $anim-easing 0s,
+    clip $anim-time $anim-easing 0s,
+    min-width $anim-time $anim-easing 0s,
+    max-width $anim-time $anim-easing 0s,
+    margin $anim-time $anim-easing 0s,
+    padding $anim-time $anim-easing 0s,
+
+    // Hide at end of the transition
+    visibility 0s $anim-easing $anim-time;
+}
+
+// Minimized -> Unminimized
+#ReportStatus label,
+#ReportStatus button,
+#ReportStatus button * {
+  transition:
+    opacity $anim-time $anim-easing 0s,
+    clip $anim-time $anim-easing 0s,
+    min-width $anim-time $anim-easing 0s,
+    max-width $anim-time $anim-easing 0s,
+    margin $anim-time $anim-easing 0s,
+    padding $anim-time $anim-easing 0s,
+
+    // Show immediately
+    visibility 0s;
 }
